--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Para mi persona favorita 🌸</title>
+  <title>PapitaaaWeb 🌸</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <style>
     :root {
@@ -384,3 +384,4 @@ setupHuye("canvasR1", "❤️"); setupHuye("canvasR2", "💜");
 </script>
 </body>
 </html>
+
